# kurisu

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  README.tpl  grcov.yml  notes.txt
.github/workflows/: cargo-release.yml  ci-checks.yml  ci-coverage.yml  ci-test.yml
kurisu/: Cargo.toml  README.md
kurisu-derive/: Cargo.toml  README.md
kurisu-derive/src/: lib.rs
kurisu/examples/: Cargo.toml
kurisu/src/: lib.rs
kurisu/src/arg/: parser.rs
kurisu/src/arg/parser/: extras.rs
kurisu/tests/: struct_args.rs  struct_info.rs
src/: arg.rs  arg_parser.rs  exit_code.rs  lib.rs  mayuri.rs
src/arg/: error.rs  parser.rs
tests/: normalize_env_args.rs  parser_extras.rs  struct_args.rs  struct_info.rs  validate_usage.rs
tuturu/: Cargo.toml
tuturu-kurisu/: Cargo.toml
tuturu-kurisu/kurisu-derive/src/: lib.rs
tuturu-kurisu/src/: arg.rs  arg_parser.rs  exit_code.rs  lib.rs  mayuri.rs
tuturu-kurisu/tests/: normalize_env_args.rs  struct_args.rs  struct_info.rs
