[package]
name = "kurisu"
version = "0.1.0"
authors = ["Philippe Guilbault <pguilbault@smartnewb.com>"]
edition = "2018"
license = "MIT / Unlicense"
categories = ["command-line-interface"]
keywords = ["console", "terminal", "arg", "argument", "cli", "parse", "flag", "options", "annotation"]
description = "Small idiomatic derive macro helper to parse command line arguments"

[lib]
bench = false

[dependencies]
kurisu-derive = { path = "kurisu-derive" }
once_cell = "1.4"
textwrap = { version = "0.11", optional = true }
gettext-macros = { version = "0.5", optional = true }
termcolor = { version = "1.1", optional = true }
atty = { version = "0.2", optional = true }

[features]
default = []
#prompt = ["console"]
color = ["termcolor", "atty"]
i18n = ["gettext-macros"]

[dev-dependencies]
#criterion = "0.3"
toml ="0.5"

[workspace]
members = [
#    "tuturu-okabe", # Binary patcher / updater
#    "tuturu-itaru", # Console Lib
    "kurisu-derive",
    "examples",
]

default-members = [
	".",
    "kurisu-derive",
]
