[package]
name = "kurisu"
version = "0.1.0"
authors = ["Philippe Guilbault <philippe.guilbault@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["command-line-interface"]
keywords = ["arg", "argument", "flag", "option", "cli", "parse", "annotation", "getopts"]
description = "Small idiomatic command line options parser"
documentation = "https://docs.rs/kurisu/"
homepage = "https://github.com/Bwen/kurisu"
repository = "https://github.com/Bwen/kurisu"

[lib]
bench = false
path = "src/lib.rs"

[dependencies]
kurisu-derive = { path = "kurisu-derive" }
once_cell = "1.4"
textwrap = "0.11"
url = { version = "2.1.1", optional = true }
#gettext-macros = { version = "0.5", optional = true }
#termcolor = { version = "1.1", optional = true }
#atty = { version = "0.2", optional = true }

[features]
default = []
parser_extras = ["url"]
#prompt = ["console"]
#color = ["termcolor", "atty"]
#i18n = ["gettext-macros"]

[dev-dependencies]
#criterion = "0.3"
toml ="0.5"
float-cmp = "0.8.0"

[workspace]
members = [
#    "tuturu-okabe", # Binary patcher / updater
#    "tuturu-itaru", # Console Lib
    "kurisu-derive",
    "examples",
]

default-members = [
	".",
    "kurisu-derive",
]
