[package]
name = "kurisu"
version = "0.1.1"
authors = ["Philippe Guilbault <pguilbault@proton.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["command-line-interface"]
keywords = ["arg", "argument", "flag", "option", "cli", "parse", "annotation", "getopts"]
description = "Small idiomatic command line options parser"
documentation = "https://docs.rs/kurisu/"
homepage = "https://github.com/Bwen/kurisu"
repository = "https://github.com/Bwen/kurisu"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[lib]
bench = false
path = "src/lib.rs"

[dependencies]
kurisu-derive = { version = "=0.1.1", path = "kurisu-derive" }
once_cell = "1.11"
textwrap = { version = "0.12", features = ["terminal_size"] }
url = { version = "2.2", optional = true }

[features]
default = []
parser_extras = ["url"]

[dev-dependencies]
toml = "0.5"
float-cmp = "0.9.0"

[workspace]
members = [
    "kurisu-derive",
    "examples",
]

default-members = [
    ".",
    "kurisu-derive",
]