[package]
name = "kurisu-derive"
version = "0.1.4"
authors = ["Philippe Guilbault <pguilbault@proton.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["command-line-interface"]
keywords = ["argument", "flag", "option", "cli", "parse"]
description = "Small idiomatic command line options parser"
documentation = "https://docs.rs/kurisu-derive/"
homepage = "https://github.com/Bwen/kurisu/kurisu-derive"
repository = "https://github.com/Bwen/kurisu/kurisu-derive"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = {version = "1", features = ["extra-traits", "derive", "parsing"]}
proc-macro2 = "1"
quote = "1"
proc-macro-error = "1"
