[package]
name = "tuturu-kurisu"
version = "0.1.0"
authors = ["Philippe Guilbault <pguilbault@smartnewb.com>"]
edition = "2018"
license = "MIT / Unlicense"
categories = ["command-line-interface"]
keywords = ["console", "terminal", "arg", "argument", "cli", "parse", "flag", "options", "annotation"]
description = "Derive macro helper to parse command line arguments"

[lib]
bench = false

[dependencies]
kurisu-derive = { path = "kurisu-derive" }
once_cell = "1.4"
textwrap = "0.11"
gettext-macros = { version = "0.5", optional = true }
termcolor = { version = "1.1", optional = true }
atty = { version = "0.2", optional = true }

[features]
default = []
#prompt = ["console"]
color = ["termcolor", "atty"]
i18n = ["gettext-macros"]

[dev-dependencies]
criterion = "0.3"
toml ="0.5"

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
harness = false
name = "01_from_args"
path = "benches/01_from_args.rs"
